# LearnOpenGL

./: CMakeLists.txt  error_list.md  run.sh  script.sh
configuration/: root_directory.h
includes/: stb_image.h
includes/learnopengl/: animator.h  filesystem.h  model.h  shader_s.h
src/: main
src/1.getting_started/: glad.c
src/1.getting_started/1.1.hello_window/: hello_window.cpp
src/1.getting_started/2.1.hello_triangle/: hello_triangle.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
src/1.getting_started/2.3.hello_triangle_exercise1/: hello_triangle_exercise1.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: hello_triangle_exercise2.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: hello_triangle_exercise3.cpp
src/1.getting_started/3.1.shaders_uniform/: hello_shader_uniform.cpp
src/1.getting_started/3.2.shaders_interpolation/: hello_shader_interpolation.cpp
src/1.getting_started/3.3.shaders_class/: hello_shader_class.cpp  shader_conv.vs  shader_offset.vs
src/1.getting_started/4.1.textures/: hello_texture.cpp
src/1.getting_started/4.2.textures_combined/: 4.2.texture.fs  hello_texture_combined.cpp
src/1.getting_started/4.3.textures_mix/: 4.3.texture_mix.fs  hello_texture_mix.cpp
src/1.getting_started/4.6.textures_exercise4/: hello_texture_exercise4.cpp
src/1.getting_started/5.1.transformations/: hello_transformations.cpp
src/1.getting_started/5.2.transformations_exercise2/: hello_transformations_exercise2.cpp
src/1.getting_started/6.1.coordinate_systems/: hello_coordinate_system.cpp
src/1.getting_started/6.2.coordinate_systems_depth/: hello_coordinate_system_depth.cpp  hello_coordinate_system_rotate.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: hello_coordinate_system_multuple.cpp
src/1.getting_started/6.4.coordinate_systems_exercise3/: hello_coordinate_system_exercise3.cpp
src/1.getting_started/7.1.camera_circle/: hello_camera.cpp
src/2.lighting/1.colors/: colors.cpp
(+65 files in other folders)
